@@ -101,6 +101,7 @@ public:
      */
     enum version
     {
+        AC1009_MIN,     // R12, minimalistic
         AC1009,         // R12
         AC1012,
         AC1014,
