@@ -6,6 +6,7 @@
 - [#325] Check pattern for inverse compatibility.
 
 # Version 0.4.2
+- [#443] Not valid dxf file. libdxf updated to version 3.12.2.0. Fixed drawing subpaths.
 - Fixed combobox width in Dialog "Tool True Dart point".
 - [#441] Broken reference incrementation for tool "True Dart point".
 - [#439] Widen Formula Dialog.
